Part1/Exercise 1.11 Persisting data/manifests/log-outoput-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: anonymous92/log-output
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /shared
          name: shared-storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-pvc
