Part1/Exercise 1.11 Persisting data/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
      - name: ping-pong
        image: anonymous92/pingpong-app
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /shared
          name: shared-storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-pvc
