Part1/Exercise 1.11 Persisting data/manifests/log-outoput-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  selector:
    app: log-output
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
