Part1/Exercise 1.11 Persisting data/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  selector:
    app: ping-pong
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
